<resources>
    <string name="app_name">Mortgage Calculator V2</string>

    <!-- Mortgage Page 1 Number Labels -->
        <!-- Left Side -->
        <string name="amount_label">Amount</string>
        <string name="year_label">Years</string>
        <string name="interest_label">Interest Rate</string>
        <string name="monthly_label">Monthly Payment</string>
        <string name="total_label">Total Payment</string>

        <!-- Right Side -->
        <string name="amount1">$100000.00</string>
        <string name="amount2">30</string>
        <string name="amount3">3.5%</string>
        <string name="amount4">$449.04</string>
        <string name="amount5">$161654.66</string>

        <!-- Center -->
        <string name="modify_label">Modify Data</string>

    <!-- Page 2 -->
        <!-- Left Side -->
        <string name="year_label2">Years</string>
        <string name="amount_label2">Amount</string>
        <string name="interest_label2">Interest Rate</string>

        <!-- Buttons -->
        <string name="ten">10</string>
        <string name="fifteen">15</string>
        <string name="thirty">30</string>
        <string name="interest_dec">.035</string>
        <string name="large_amount">100000.00</string>

        <!-- Center -->
        <string name="button2_label">Done</string>


</resources>
